--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+app-reclamacao-item {
+    display: block;
+}
+
+app-reclamacao-item img {
+    width: 50px;
+}
